@@ -1,3 +1,7 @@
+Sun Aug 31 12:41:09 2008  Koichi Sasada  <ko1@atdot.net>
+
+	* sampledriver/main.c: update.
+
 Sun Aug 31 12:32:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* dir.c (dir_chdir): fixed typo.
